changes to index.html

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 				</section>
 				
 				<section id="17" data-audio-src="audio/14-we_are_met.ogg" data-background="">
-					<h3>Office of Arts and Sciences Information Services (OASIS)</h3>
-					<p style="background-color:lightgrey;color:black">WordPress Technician</p>
+					<h2>Office of Arts and Sciences Information Services (OASIS)</h2>
+					<h3 style="background-color:lightgrey;color:black">WordPress Web Developer</h3>
 					<img src="/inls161-revealjs/images/wordpress.jpg">
 					<aside class="notes">
 						<p>
